# muon_wire_estimator

./: .gitignore  README.md  Test.json  calculations.md  cf25_fine_scan.csv  cosmic_muon_2000V_worked_example.md  howtoinstall.md  out1.json  pyproject.toml  single_wire_signal_scan.csv  thin_wire_fine_scan.csv
examples/: beta_sr90_air_25um.json  beta_sr90_arco2_thinwire.json  beta_sr90_event_scan.json  beta_visibility_scan_input.json  beta_visibility_scan_input_matched_path.json  level1_example.json  level2_event_scan.json  level3_calibration.json  muon_visibility_scan_diethorn.json  muon_visibility_scan_input_matched_voltages.json  muon_visibility_scan_phenom.json  visibility_scan_input.json
muon_wire_estimator/: __init__.py  beta_detector_chain.py  beta_ionization.py  beta_kinematics.py  beta_spectrum.py  calibrated_core.py  calibrated_gain.py  calibration_loader.py  calibration_models.py  core.py  drift.py  event_stats.py  gain.py  gases.py  geometry.py  ionization.py  models.py  pulse.py  randomness.py  reporting.py  source_geometry.py  source_models.py  stochastic.py  thresholds.py
muon_wire_estimator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: compare_default_vs_calibrated.py  plot_beta_visibility.py  plot_single_wire_signal_scan.py  plot_sweeps.py  plot_visibility_scan.py  run.sh  run_beta_detector_chain.py  run_beta_detector_event_scan.py  run_beta_estimator.py  run_beta_event_scan.py  run_estimator.py  run_event_scan.py  scan_beta_visibility.py  scan_visibility.py  setup_venv_local.sh  setup_venv_lxplus.sh  standalone_visibility_script.py
(+328 files in other folders)
